<?xml version="1.0"?>
<package format="2">
  <name>myface_recognition</name>
  <version>0.0.0</version>
  <description>The myface_recognition package</description>
  <maintainer email="haa-c001@athuman.com">athuman</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python-opencv</depend>
  <depend>omni_robot</depend>
  <depend>opencv_apps</depend>
  <depend>uvc_camera</depend>
  
  <export>
  </export>
</package>
